@@ -1,3 +1,8 @@
+2006-02-14 Perry
+ PATCH: [ 1431205 ] Fix ViewWhitespace \r\n bug
+ BUG: [ 1431012 ] View line differences adds additional EOL char
+  Src/editlib: ccrystaltextview.cpp
+
 2006-02-14 Kimmo
  BUG: [ 1197976 ] GeneratePatch file browse not intialized correctly
   Fix submitted by Perry
